k3d-data/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  name: simple-ns-1
  labels:
    for: simple-web-service
  annotations:
    k8s.markentier.tech/description: "NS for simple-web-service"
