k3d-data/simple-web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: simple-web-service
  labels:
    run: simple-web-service
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    run: simple-web-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web-service
spec:
  selector:
    matchLabels:
      run: simple-web-service
  replicas: 2
  template:
    metadata:
      labels:
        run: simple-web-service
    spec:
      containers:
      - name: simple-web-service
        image: registry.localhost:5000/simple-web-service:1.0.0
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
