k3d-data/nginx.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: nginx-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: traefik
    # https://docs.traefik.io/v1.7/configuration/backends/kubernetes/
    traefik.ingress.kubernetes.io/frontend-entry-points: http
    traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
    ingress.kubernetes.io/custom-request-headers: x-req-from:k3s-traefix
    ingress.kubernetes.io/custom-response-headers: x-custom-hello:world
spec:
  rules:
  - http:
      paths:
      - path: /default
        backend:
          serviceName: nginx-svc
          servicePort: 80

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-svc
  labels:
    run: nginx
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    run: nginx-app

---
apiVersion: apps/v1 
kind: Deployment
metadata:
  namespace: default
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      run: nginx-app
  replicas: 3
  template:
    metadata:
      labels:
        run: nginx-app
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.10
        ports:
        - containerPort: 80
